[project]
name = "teslib"
version = "0.1.0"
description = ""
authors = [
    {name = "Douglas",email = "douglas.santos@oneconsultoria.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "teslib", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
